# ripgrep

./: .clinerules  .continuerules  .gitignore  .rules  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  FAQ.md  GEMINI.md  GUIDE.html  GUIDE.md  INDEXING_DESIGN.md  README.html  README.md  SECURITY.md  build.rs  ciooo  pullrequest.txt  purpose.txt  ripgrep.CodeCanvas
.amazonq/rules/: governance.md
.cargo/: config.toml
.claude/: governance.md
.cursor/rules/: governance.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  horseci-e2e-test.yml  main.yaml  release.yml
.kiro/specs/unified-flag-source/: .config.kiro  design.md  requirements.md  tasks.md
.windsurf/rules/: governance.md
ci/: build-deb  cargo-out-dir  sha256-releases  test-complete  utils.sh
complete/: _rg
crates/cli/: Cargo.toml  README.html
crates/cli/src/: decompress.rs  hostname.rs  lib.rs  pattern.rs  process.rs
crates/core/: README.md  app.rs  args.rs  base64.rs  ctrlc.rs  gen.rs  haystack.rs  main.rs  messages.rs  search.rs  subject.rs
crates/core/flags/: config.rs  defs.rs  hiargs.rs  lowargs.rs  mod.rs  parse.rs
crates/core/flags/complete/: bash.rs  consistency.rs  fish.rs  mod.rs  powershell.rs  rg.zsh  zsh.rs
crates/core/flags/doc/: help.rs  man.rs  markup.rs  mod.rs  version.rs
crates/globset/: Cargo.toml  README.md
crates/globset/examples/: custom_separator.rs
crates/globset/src/: glob.rs  lib.rs  pathutil.rs  serde_impl.rs
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/examples/: share-builder-state.rs
crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  lib.rs  overrides.rs  types.rs  walk.rs
crates/ignore/tests/: bom_test.gitignore  bom_test.rs  gitignore_matched_path_or_any_parents_tests.rs  gitignore_skip_bom.rs
crates/index/src/: index.rs  lib.rs  writer.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
crates/matcher/tests/: test_matcher.rs
crates/pcre2/: Cargo.toml
crates/pcre2/src/: matcher.rs
crates/printer/: Cargo.toml
crates/printer/src/: color.rs  diff.rs  hyperlink.rs  hyperlink_aliases.rs  json.rs  json_captures.rs  jsont.rs  lib.rs  patch.rs  patcht.rs  path.rs  standard.rs  stats.rs  summary.rs  util.rs
crates/printer/src/hyperlink/: aliases.rs
crates/proptest-regressions/flags/complete/: fish.txt
crates/regex/: Cargo.toml
crates/regex/src/: ban.rs  bridge_literals.rs  config.rs  lib.rs  literal.rs  matcher.rs  multi.rs  strip.rs  word.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: line_buffer.rs  lines.rs  sink.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
doc/: rg.1.txt.tpl
fuzz/: README.md
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_glob.rs
fuzz/scripts/: run-all.sh
pkg/brew/: ripgrep-bin.rb
supply-chain/: audits.toml  config.toml
tests/: binary.rs  feature.rs  files.rs  generate.rs  head_bytes.rs  json.rs  misc.rs  patternfile.rs  regression.rs  tests.rs  util.rs
