[package]
name = "globset"
version = "0.4.15"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Cross platform single glob and glob set matching. Glob set matching is the
process of matching one or more glob patterns against a single candidate path
simultaneously, and returning all of the globs that matched.
"""
documentation = "https://docs.rs/globset"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
readme = "README.md"
keywords = ["regex", "glob", "multiple", "set", "pattern"]
license = "Unlicense OR MIT"
edition = "2021"

[lib]
name = "globset"
bench = false

[dependencies]
aho-corasick = { workspace = true }
bstr = { workspace = true, features = ["std"] }
log = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
regex-syntax= { workspace = true, features = ["std"] }
regex-automata= { workspace = true, features = ["std", "perf", "syntax", "meta", "nfa", "hybrid"] }

[dev-dependencies]
glob = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["log"]
# DEPRECATED. It is a no-op. SIMD is done automatically through runtime
# dispatch.
simd-accel = []
serde1 = ["serde"]
