[package]
name = "grep"
version = "0.3.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fast line oriented regex searching as a library.
"""
documentation = "https://docs.rs/grep"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/grep"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/grep"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
grep-cli = { workspace = true }
grep-matcher = { workspace = true }
grep-pcre2 = { workspace = true, optional = true }
grep-printer = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }

[dev-dependencies]
termcolor = { workspace = true }
walkdir = { workspace = true }

[features]
pcre2 = ["grep-pcre2"]

# These features are DEPRECATED. Runtime dispatch is used for SIMD now.
simd-accel = []
avx-accel = []
