[package]
name = "ignore"
version = "0.4.23"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense OR MIT"
edition = "2021"

[lib]
name = "ignore"
bench = false

[dependencies]
crossbeam-deque = { workspace = true }
globset = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
same-file = { workspace = true }
walkdir = { workspace = true }
regex-automata= { workspace = true, features = ["std", "perf", "syntax", "meta", "nfa", "hybrid", "dfa-onepass"] }

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.2"

[dev-dependencies]
bstr = { workspace = true, features = ["std"] }
crossbeam-channel = { workspace = true }

[features]
# DEPRECATED. It is a no-op. SIMD is done automatically through runtime
# dispatch.
simd-accel = []
