[package]
name = "grep-regex"
version = "0.1.13"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Use Rust's regex library with the 'grep' crate.
"""
documentation = "https://docs.rs/grep-regex"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/regex"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/regex"
readme = "README.md"
keywords = ["regex", "grep", "search", "pattern", "line"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
bstr = { workspace = true }
grep-matcher = { workspace = true }
log = { workspace = true }
regex-automata = { workspace = true }
regex-syntax = { workspace = true }
