[package]
name = "grep-searcher"
version = "0.1.14"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fast line oriented regex searching as a library.
"""
documentation = "https://docs.rs/grep-searcher"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/searcher"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/searcher"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
bstr = { workspace = true, features = ["std"] }
encoding_rs = { workspace = true }
encoding_rs_io = { workspace = true }
grep-matcher = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
memmap = { package = "memmap2", version = "0.9.0" }

[dev-dependencies]
grep-regex = { workspace = true }
regex = { workspace = true }

[features]
# These features are DEPRECATED. Runtime dispatch is used for SIMD now.
simd-accel = []
avx-accel = []
